Working on further improvements to the explosions including 3d-meshes and improved particle budgets